FEATURE: add responsive styles

--- a/jupter.html
+++ b/jupter.html
@@ -89,6 +89,7 @@
                 </a>
             </div>
         </div>
+        <div class="section-light"></div>
        </section>
 
        <!-- Testimonials section -->
