--- a/jupter.html
+++ b/jupter.html
@@ -7,21 +7,22 @@
    <meta name="description" content="Jupter - Revolutionary crypto investment platform">
    <meta name="keywords" content="crypto, bitcoin, ethereum, investment, blockchain">
    <link rel="stylesheet" href="jupter.css">
+   <link rel="stylesheet" href="animations.css">
 </head>
 <body>
    <!-- Main page container -->
    <main class="container">
        <!-- Hero section with background -->
-       <section class="hero">
+       <section id="first-section" class="section hero">
            <!-- Background elements -->
-           <div class="hero__background">
+           <div class="hero__background" data-anime="opacity">
                <!-- Planet -->
                <div><img class="planet" src="./assets/imgs/jupter-planet.png" alt="Jupter Planet"></div>
                
            </div>
 
            <!-- Main hero content area -->
-           <div class="hero__wrapper">
+           <div class="hero__wrapper" data-anime="bottom">
                 <div class="hero__wrapper__content">
                     <!-- Text content box -->
                     <div class="hero__text-box">
@@ -47,29 +48,29 @@
        </section>
 
        <!-- Statistics section -->
-       <section class="statistics">
+       <section class="section statistics">
         <div class="statistics-content">
             <!-- Logo -->
-            <div class="logo">
+            <div class="logo" data-anime="opacity">
                 <img src="./assets/imgs/jupter-logo.png" alt="Jupter" />
             </div>
-            <div class="section-divider"></div>
+            <div class="section-divider" data-anime="opacity"></div>
             <div class="statistics__grid">
-                <div class="stat-card">
+                <div class="stat-card" data-anime="bottom--speed-02">
                     <div class="stat-card__number-wrapper">
                     <h2 class="stat-card__number">394</h2>
                     </div>
                     <p class="stat-card__label">Investors in the network</p>
                     <div class="stat-card__light"></div>
                 </div>
-                <div class="stat-card">
+                <div class="stat-card" data-anime="bottom">
                     <div class="stat-card__number-wrapper">
                         <h2 class="stat-card__number">2,835,077,434</h2>
                     </div>
                     <p class="stat-card__label">R$ Dry Powder</p>
                     <div class="stat-card__light"></div>
                 </div>
-                <div class="stat-card">
+                <div class="stat-card" data-anime="bottom--speed-02">
                     <div class="stat-card__number-wrapper">
                     <h2 class="stat-card__number">11,929,851,443</h2>
                     </div>
@@ -77,7 +78,7 @@
                     <div class="stat-card__light"></div>
                 </div>
             </div>
-            <div class="partners__grid">
+            <div class="partners__grid" data-anime="opacity">
                 <a class="sponsor-link" href="#" target="_blank">
                     <img src="./assets/imgs/sponsor-01.png" alt="Jupter" class="partner-logo jupter" />
                 </a>
@@ -89,14 +90,14 @@
                 </a>
             </div>
         </div>
-        <div class="section-light"></div>
+        <div class="section-light" data-anime="opacity"></div>
        </section>
 
        <!-- Testimonials section -->
-       <section class="testimonials">
+       <section class="section testimonials">
         <div class="testimonials-content">
-            <h2 class="testimonialstitle">Testimonials</h2>
-            <div class="testimonials-carousel">
+            <h2 class="testimonialstitle" data-anime="opacity">Testimonials</h2>
+            <div class="testimonials-carousel" data-anime="bottom">
                 <div class="carouselnav-wrapper">
                     <button class="carouselnav carouselnav--prev">
                         <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -138,7 +139,7 @@
      </section>
 
        <!-- Footer -->
-       <footer class="footer">
+       <footer class="footer last-element">
             <div class="footercontent">
                 <p class="footertagline">Find . Fund . Launch</p>
                 <p class="footer__copyright">Copyright 2023 JUPTER S.A. All Rights Reserved.</p>
@@ -206,6 +207,35 @@
 
     // Initialize the first testimonial
     updateTestimonial();
+
+    //#region Scroll animations
+
+    const animationTarget = document.querySelectorAll('[data-anime]');
+        const animationClass = 'animate';
+        const windowHeight = window.innerHeight;
+        const lastPageElement = document.querySelector('.last-element');
+
+        function animeScroll() {
+            animationTarget.forEach(function (element) {
+                if (element.getBoundingClientRect().top < windowHeight - 150) {
+                    if (!element.classList.contains(animationClass)) {
+                        element.classList.add(animationClass);
+                    } 
+                }
+            })
+        }
+
+        animeScroll();
+
+        window.addEventListener('scroll', function () {
+            if (window.innerWidth > 1080) {
+                if (!lastPageElement.classList.contains('animate')) {
+                    animeScroll();
+                }
+            }
+        });
+
+        //#endregion Scroll animations
 </script>
 </body>
 </html>
