FEAT: add copy to hero sectin

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="hero__wrapper__content">
                     <!-- Text content box -->
                     <div class="hero__text-box">
-                        <h1>Crypto ipsum bitcoin ethereum</h1>
-                        <p>Crypto ipsum bitcoin ethereum</p>
+                        <h1>Find, Fund, Launch</h1>
+                        <p>Jupter, by the community for the community</p>
                     </div>
                     
                     <!-- Actions container with dark background -->
